@startuml
title "Modelo Lógico Relacional (3FN)\nSistema de Gestión de Citas Médicas"
skinparam backgroundColor #FEFEFE
skinparam entity {
  BorderColor #1B4F72
  BackgroundColor #D6EAF8
  FontSize 10
}

' ── TABLAS DEL MÓDULO CLÍNICO ──

entity "Usuario" as E01 {
  *idUsuario: int <<PK>>
  --
  tipoDocumento: varchar(20)
  numeroDocumento: varchar(20)
  nombres: varchar(100)
  apellidos: varchar(100)
  correo: varchar(100)
  telefono: varchar(20)
  contrasena: varchar(255)
  rol: varchar(50)
  fechaRegistro: datetime
}

entity "Paciente" as E02 {
  *idPaciente: int <<PK>>
  --
  tipoDoc: varchar(20)
  dni: varchar(20)
  nombres: varchar(100)
  apellidos: varchar(100)
  fechaNacimiento: date
  sexo: char(1)
  telefono: varchar(20)
  correo: varchar(100)
  direccion: varchar(255)
}

entity "Cita" as E03 {
  *idCita: int <<PK>>
  --
  idPaciente: int <<FK>>
  idMedico: int <<FK>>
  fechaHora: datetime
  estado: varchar(30)
  motivo: varchar(500)
  tipoConsulta: varchar(50)
}

entity "HistoriaClinica" as E04 {
  *idHistoria: int <<PK>>
  --
  idPaciente: int <<FK>>
  idMedico: int <<FK>>
  motivoConsulta: varchar(500)
  enfermedadActual: varchar(1000)
  examenFisico: varchar(1000)
  diagnosticoCIE10: varchar(20)
  planTratamiento: varchar(1000)
  fechaRegistro: datetime
}

entity "Triaje" as E05 {
  *idTriaje: int <<PK>>
  --
  idCita: int <<FK>>
  presionArterialSist: int
  presionArterialDiast: int
  frecuenciaCardiaca: int
  temperatura: decimal(4,1)
  peso: decimal(5,2)
  talla: decimal(4,2)
  saturacionOxigeno: int
  fechaHora: datetime
}

entity "Receta" as E06 {
  *idReceta: int <<PK>>
  --
  idCita: int <<FK>>
  idHistoria: int <<FK>>
  medicamento: varchar(200)
  dosis: varchar(100)
  duracion: varchar(100)
  indicaciones: varchar(500)
  fechaEmision: datetime
}

' ── TABLAS DEL MÓDULO DE PAGOS ──

entity "Pago" as E07 {
  *idPago: int <<PK>>
  --
  idCita: int <<FK>>
  idReserva: int <<FK>> (nullable)
  monto: decimal(10,2)
  impuesto: decimal(10,2)
  descuento: decimal(10,2)
  formaPago: varchar(50)
  fechaPago: datetime
  referencia: varchar(100)
  estado: varchar(30)
}

' ── TABLAS DEL MÓDULO DE ESPACIOS ──

entity "Ubicacion" as E08 {
  *idUbicacion: int <<PK>>
  --
  nombre: varchar(100)
  direccion: varchar(255)
  piso: varchar(20)
  edificio: varchar(100)
}

entity "Espacio" as E09 {
  *idEspacio: int <<PK>>
  --
  idUbicacion: int <<FK>>
  codigo: varchar(20)
  nombre: varchar(100)
  tipoEspacio: varchar(50)
  capacidad: int
  estado: varchar(30)
  horaApertura: time
  horaCierre: time
}

entity "Precio" as E10 {
  *idPrecio: int <<PK>>
  --
  idEspacio: int <<FK>>
  tipoTarifa: varchar(50)
  monto: decimal(10,2)
  moneda: varchar(3)
  fechaInicioVigencia: date
  fechaFinVigencia: date
}

entity "Caracteristica" as E11 {
  *idCaracteristica: int <<PK>>
  --
  nombre: varchar(100)
  descripcion: varchar(500)
}

entity "EspacioCaracteristica" as E12 {
  *idEspacio: int <<FK>>
  *idCaracteristica: int <<FK>>
}

entity "Reserva" as E13 {
  *idReserva: int <<PK>>
  --
  idUsuario: int <<FK>>
  idEspacio: int <<FK>>
  fechaInicio: datetime
  fechaFin: datetime
  estadoReserva: varchar(30)
  montoTotal: decimal(10,2)
  impuestos: decimal(10,2)
  descuentos: decimal(10,2)
}

entity "Auditoria" as E14 {
  *idAuditoria: int <<PK>>
  --
  idUsuario: int <<FK>>
  accion: varchar(100)
  modulo: varchar(50)
  detalle: varchar(1000)
  fechaHora: datetime
  direccionIP: varchar(50)
  dispositivo: varchar(100)
}

' ── RELACIONES ──

E01 ||..o{ E03 : "1 → 0..*"
E02 ||..|{ E03 : "1 → 1..*"
E02 ||..|{ E04 : "1 → 1..*"
E03 ||..o| E05 : "1 → 0..1"
E03 ||..o{ E06 : "1 → 0..*"
E04 ||..o{ E06 : "1 → 0..*"
E03 ||..|| E07 : "1 → 1"
E13 ||..o{ E07 : "1 → 0..*"

E08 ||..|{ E09 : "1 → 1..*"
E09 ||..o{ E10 : "1 → 0..*"
E09 ||..o{ E13 : "1 → 0..*"
E09 }o..o{ E11 : "M → N"
E12 ||..|| E09 : "M"
E12 ||..|| E11 : "N"

E01 ||..o{ E13 : "1 → 0..*"
E01 ||..o{ E14 : "1 → 0..*"

@enduml